changed index file

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 
 	</head>
 	<body>
-		<h1>Hello Express.js.  Tracy Dean welcomes you to her world.</h1>
+		<h1>Hello Express.js.</h1>
+		<p>Tracy Dean welcomes you to her world.</p
 
 	</body>
 
