changed to acronum text

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 
 	</head>
 	<body>
-		<h1>Hello Express.js.</h1>
-		<p>Tracy Dean welcomes you to her world.</p
+		<h1>Acronyms-R-Us</h1>
+		<p>Want a new and unique acronym for YOUR business?  Enter your corporation name below, hit enter, and you'll get your very own unique acronym, comlete with a full report!</p>
 
 	</body>
 
